Fix text overflow responsiveness bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -2438,11 +2438,11 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #73001D;
+  border-color: #73001D;
 }
 .btn-primary:hover {
-  color: #fff;
+  color: #73001D;
   background-color: #fec810;
   border-color: #fec503;
 }
@@ -10048,7 +10048,7 @@ img::-moz-selection {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  background-color: #0d0f10;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -10056,11 +10056,11 @@ img::-moz-selection {
   font-size: 0.75rem;
   color: #fff;
   text-transform: uppercase;
-  background-color: #fed136;
+  background-color: #73001D;
   border: 0;
 }
 #mainNav .navbar-brand {
-  color: #fed136;
+  color: #73001D;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   letter-spacing: 0.0625em;
@@ -10135,9 +10135,9 @@ header.masthead .masthead-subheading {
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
-  font-size: 3.25rem;
+  font-size: 8vw;
   font-weight: 700;
-  line-height: 3.25rem;
+  line-height: 8.5vw;
   margin-bottom: 1rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
